--- a/assets/css/box-center.css
+++ b/assets/css/box-center.css
@@ -12,7 +12,7 @@
 }
 
 .newGame {
-    font-family: consolas sans-serif;
+    font-family: 'Lato', sans-serif;
     background-color: #fff;
     padding: 10px;
     color: #e74c3c;
@@ -42,7 +42,7 @@
 
 /* Style pour le bouton "LANCER LES DÉS" */
 .rollDice {
-    font-family: consolas sans-serif;
+    font-family: 'Lato', sans-serif;
     background-color: #fff;
     padding: 10px;
     color: #e74c3c;
@@ -67,7 +67,7 @@
 
 /* Style pour le bouton "GARDER" */
 .hold {
-    font-family: consolas sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 19px;
     background-color: #fff;
     padding: 10px;
