--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,5 +3,5 @@
 @import url('/assets/css/box-center.css');
 @import url('/assets/css/modal.css');
 @import url('/assets/css/popup.css');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css');
